--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | 3-column preview card component</title>
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <!-- Feel free to remove these styles or customise in your owstylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
